WebCore/rendering/RenderLayer.h
@@ -387,7 +387,6 @@ protected:
     RenderLayer* m_last;
 
     IntRect m_repaintRect; // Cached repaint rects. Used by layout.
-    IntRect m_fullRepaintRect;
     int m_repaintX;
     int m_repaintY;
 
