third_party/WebKit/WebCore/rendering/RenderSVGText.cpp
@@ -78,7 +78,7 @@ void RenderSVGText::layout()
 
     bool repainted = false;
     if (checkForRepaint)
-        repainted = repaintAfterLayoutIfNeeded(oldBounds, oldBounds);
+        repainted = repaintAfterLayoutIfNeeded(oldBounds);
     
     setNeedsLayout(false);
 }
